--- a/FutureValue/Views/Home/Index.cshtml
+++ b/FutureValue/Views/Home/Index.cshtml
@@ -9,6 +9,10 @@
         <h1 class="mt-3">@ViewBag.Title</h1>
     </header>
     <main>
+        <div class="alert alert-success alertalert-dismissible">
+            <button class="close" data-dismiss="alert">&times;</button>
+            Success!<a href="#" class="alert-link">Learn more</a>
+        </div>
         <form asp-action="Index" method="post" class="form-horizontal">
             <div class="row">
                 <label asp-for="MonthlyInvestment"
